--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build:ui": "rm -rf build && cd /Users/jennipuhakka/puh && npm run build --prod && cp -r build /Users/jennipuhakka/phonebook_backend",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "Jenni Puhakka",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.24.0",
     "nodemon": "^2.0.7"
   },
   "dependencies": {
